<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/product_linear_layout"
        android:padding="@dimen/standard_layout_padding">

        <TextView
            android:id="@+id/name_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/standard_layout_padding"
            android:text="@string/product">

        </TextView>

        <EditText
            android:id="@+id/edit_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/standard_layout_padding"
            android:inputType="text">

        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/protein_linear_layout"
        android:layout_below="@id/product_linear_layout"
        android:padding="@dimen/standard_layout_padding">

        <TextView
            android:id="@+id/name_protein"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/standard_layout_padding"
            android:text="@string/protein">

        </TextView>

        <EditText
            android:id="@+id/edit_protein_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:padding="@dimen/standard_layout_padding">

        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/fat_linear_layout"
        android:layout_below="@id/protein_linear_layout"
        android:padding="@dimen/standard_layout_padding">

        <TextView
            android:id="@+id/name_fat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/standard_layout_padding"
            android:text="@string/fat">

        </TextView>

        <EditText
            android:id="@+id/edit_fat_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:padding="@dimen/standard_layout_padding">

        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/carbohydrates_linear_layout"
        android:layout_below="@id/fat_linear_layout"
        android:padding="@dimen/standard_layout_padding">

        <TextView
            android:id="@+id/name_carbohydrates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/standard_layout_padding"
            android:text="@string/carbohydrates">

        </TextView>

        <EditText
            android:id="@+id/edit_carbohydrates_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:padding="@dimen/standard_layout_padding">

        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/calorie_linear_layout"
        android:layout_below="@id/carbohydrates_linear_layout"
        android:padding="@dimen/standard_layout_padding">

        <TextView
            android:id="@+id/name_calorie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/standard_layout_padding"
            android:text="@string/calorie">

        </TextView>

        <EditText
            android:id="@+id/edit_calorie_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:padding="@dimen/standard_layout_padding">

        </EditText>

    </LinearLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/standard_layout_padding"
        android:layout_margin="@dimen/standard_layout_padding"
        android:text="@string/save_button"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true">

    </Button>

</RelativeLayout>